--- a/style.css
+++ b/style.css
@@ -1085,7 +1085,7 @@ hr.soften.white {
     margin: 10px 20px;
 }
 
-.circle:hover {
+.circle:hover::after {
     -webkit-animation: pulse 1s infinite;
 }
 
@@ -1100,7 +1100,7 @@ hr.soften.white {
     height: 0;
     margin: auto;
     border-radius: 50%;
-    background-image: linear-gradient(to bottom, #b37bb9 0%, #183db9 51%, #0f2980 100%);
+    background-image: radial-gradient(circle farthest-corner at 84.6% 77.8%, rgb(111, 114, 226) 0%, rgb(22, 7, 62) 90%);
     content: "";
     color: #fff;
     box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
@@ -1142,26 +1142,32 @@ hr.soften.white {
 
 @-webkit-keyframes pulse {
     0% {
-        -moz-transform: scale(0.9);
-        -ms-transform: scale(0.9);
-        -webkit-transform: scale(0.9);
-        transform: scale(0.9);
+        -webkit-box-shadow: 0 0 0 0 rgba(204, 169, 44, 0.8);
     }
 
     70% {
-        -moz-transform: scale(1);
-        -ms-transform: scale(1);
-        -webkit-transform: scale(1);
-        transform: scale(1);
-        box-shadow: 0 0 0 50px rgba(90, 153, 212, 0);
+        -webkit-box-shadow: 0 0 0 10px rgba(204, 169, 44, 0);
     }
 
     100% {
-        -moz-transform: scale(0.9);
-        -ms-transform: scale(0.9);
-        -webkit-transform: scale(0.9);
-        transform: scale(0.9);
-        box-shadow: 0 0 0 0 rgba(90, 153, 212, 0);
+        -webkit-box-shadow: 0 0 0 0 rgba(204, 169, 44, 0);
+    }
+}
+
+@keyframes pulse {
+    0% {
+        -moz-box-shadow: 0 0 0 0 rgba(204, 169, 44, 0.8);
+        box-shadow: 0 0 0 0 rgba(164, 95, 232, 0.8);
+    }
+
+    70% {
+        -moz-box-shadow: 0 0 0 10px rgba(204, 169, 44, 1);
+        box-shadow: 0 0 0 15px rgba(164, 95, 232, 0.5);
+    }
+
+    100% {
+        -moz-box-shadow: 0 0 0 0 rgba(204, 169, 44, 1);
+        box-shadow: 0 0 0 5px rgba(164, 95, 232, 0.1);
     }
 }
 
